# OOP_labs

task0/: CMakeLists.txt
task0/src/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Statistic.cpp  Statistic.h  TextParser.cpp  TextParser.h  main.cpp
task0/test/: TestStatistic.cpp  TestTextParser.cpp
